fix: CardDeck에서 카드를 뽑을 때 불변리스트를 반환하지 않도록 수정